--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server/index.js"
   },
   "dependencies": {
     "canvas-confetti": "^1.9.4",
     "chess.js": "^1.4.0",
+    "express": "^4.21.0",
+    "pg": "^8.13.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
